Changed the loader to show infinitely

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body onload="loaderDisabler()">
     <div class="container">
-        <h2>How To Create A Loader</h2>
+        <!-- <h2>How To Create A Loader</h2> -->
         <div class="loader" id="loader">
             <img src="img/book-cover.jpg" alt="book cover">
         </div>
