Removed unneccessary code

--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html>
 
 <head>
+    <title>Book Loader</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/bookLoader.css">
 </head>
 
 <body onload="loaderDisabler()">
     <div class="container">
-        <!-- <h2>How To Create A Loader</h2> -->
+        <h2>A book loader</h2>
         <div class="loader" id="loader">
             <img src="img/book-cover.jpg" alt="book cover">
         </div>
     </div>
-    <script src="js/bookLoader.js"></script>
 </body>
 
 </html>
