Removed onload function call

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/bookLoader.css">
 </head>
 
-<body onload="loaderDisabler()">
+<body>
     <div class="container">
         <h2>A book loader</h2>
         <div class="loader" id="loader">
