--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <img src="img/book-cover.jpg" alt="book cover">
         </div>
     </div>
+    <script src="js/bookLoader.js"></script>
 </body>
 
 </html>
